Add endpoint to compare spectra
